# iolife

./: .gitignore  Cargo.toml  README.md  action_planner_response_times.txt  analyze_logs.py  implementation_plan.md  llm_responses.txt  llm_responses_1.txt  out  plan.txt  simulation_actions_and_events_graph.md  teste.txt  village_sim.sqlite-journal
src/: agent_mind.rs  cli.rs  dramaturgy_calibration.rs  economy_catalog.rs  headless.rs  lib.rs  llm_adapter.rs  main.rs  persistence.rs  sim_core.rs  tui.rs  village_sim.sqlite  world_gen.rs  world_history.rs  world_model.rs
src/gui/: agent_render.rs  camera.rs  coords.rs  input.rs  map_render.rs  mod.rs  palette.rs  runtime.rs  selection.rs  ui.rs
src/sim_core/: cognition.rs  conflict.rs  debug.rs  economy.rs  fauna.rs  helpers.rs  navigation.rs  politics.rs  social.rs  tick.rs  utility_ai.rs  views.rs
tests/: simulation.rs
