[package]
name = "medieval_village_llm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bevy_ecs = "0.17"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29"
rand = "0.9"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.20"
